--- a/css/style.css
+++ b/css/style.css
@@ -237,3 +237,29 @@ nav .searchForm{
   border: thin solid black;
 
 }
+
+.popup{
+  font-family: 'Raleway',sans-serif;
+  padding: 5px;
+  display: inline;
+}
+.popup b{
+  display: inline;
+}
+.grey{
+  color: #ccc;
+  font-weight: lighter;
+  /*float: right;*/
+}
+.speechPart{
+  color: #000;
+  font-weight: normal;
+}
+.definition{
+  font-size: 12px;
+  width: 100%;
+  text-align: justify;
+}
+.fa-volume-up{
+  cursor: pointer;
+}
