--- a/css/style.css
+++ b/css/style.css
@@ -231,9 +231,56 @@ nav .searchForm{
   float: right;
   background-color: #fff;
   box-sizing:border-box;
+  overflow-y: auto;
   width: 40%;
   margin: 20px;
   height: 44vw;
   border: thin solid black;
 
 }
+
+
+/* Social sharing START*/
+.btn-twitter {
+    background: #00acee;
+    border-radius: 0;
+    color: #fff
+}
+.btn-twitter:link, .btn-twitter:visited {
+    color: #fff
+}
+.btn-twitter:active, .btn-twitter:hover {
+    background: #0087bd;
+    color: #fff
+}
+.btn-facebook {
+    background: #3b5998;
+    border-radius: 0;
+    color: #fff
+}
+.btn-facebook:link, .btn-facebook:visited {
+    color: #fff
+}
+.btn-facebook:active, .btn-facebook:hover {
+    background: #30477a;
+    color: #fff
+}
+.btn-googleplus {
+    background: #e93f2e;
+    border-radius: 0;
+    color: #fff
+}
+.btn-googleplus:link, .btn-googleplus:visited {
+    color: #fff
+}
+.btn-googleplus:active, .btn-googleplus:hover {
+    background: #ba3225;
+    color: #fff
+}
+/* Social sharing END*/
+
+/* responsive img START*/
+.wrapper { display: table; table-layout: fixed; width: 100% }
+img.img-responsive { display: table-cell; max-width: 100%;align-self: center }
+/* responsive img END*/
+
