--- a/css/style.css
+++ b/css/style.css
@@ -2,15 +2,21 @@
     --yellowColour: #FFF;
     --blueColour:#0F559C;
     --pinkColour:#F26963;
-    --purpleColour:#6600cc;
+    --purpleColour:#1E88E5;
 }
 *{
 	padding:0;
 	margin:0;
 }
+A{
+  color:#4285f4;
+}
+A:hover{
+  color:#306199;
+}
 body{
-  background-color: var(--yellowColour);
-  font-family: 'Quicksand', sans-serif;
+  background-color: #ecf0f1;
+  font-family: 'Raleway', sans-serif;
 }
 #navbar{
   margin: -10px;
@@ -19,10 +25,20 @@ body{
   margin-right: 0;
   z-index: 20;
 }
+#title{
+  color:white;
+  text-decoration: none;
+}
+.list-right h3, small{
+  padding-bottom:10px;
+}
+.list-right p{
+  padding-top:10px;
+}
 nav{
   width: 100vw;
   height: 8vw;
-  min-height: 70px;
+  min-height: 80px;
   padding-top: 10px;
   max-height: 60px;
   margin: auto;
@@ -34,11 +50,15 @@ nav{
   -moz-transition: all 0.3s ease;
   -o-transition: all 0.3s ease;
   transition: all 0.3s ease;
+  -webkit-box-shadow: 10px 10px 25px -10px rgba(30,136,229,1);
+  -moz-box-shadow: 10px 10px 25px -10px rgba(30,136,229,1);
+  box-shadow: 10px 10px 25px -10px rgba(30,136,229,1);
 }
 nav .companyInfo{
   width: 42%;
   display: inline-block;
   float: left;
+  font-family: Lobster;
   /*border: 1px solid green;*/
 }
 nav i {
@@ -60,12 +80,12 @@ nav .searchForm{
   height: 40px;
   /*border: 2px solid black;*/
   margin-left: 40%;
-  margin-top: 10px;
+  margin-top: 23px;
 }
 
 #search-form{
 	display:block;
-	margin-bottom:15px;
+
 }
 
 .fieldcontainer{
@@ -165,14 +185,15 @@ nav .searchForm{
 
 #back-button{
   text-decoration: none;
-  background:var(--pinkColour);
+  background:#1E88E5;
+  font-family: Lobster;
   width: 200px;
   height: 30px;
-  padding:8px 13px;
+  padding:8px 0px 8px;
   border:#ccc 1px solid;
-  color: #000;
+  color: #EEEEEE;
   border-radius:5px;
-	margin:10px;
+	margin:30px 10px 10px;
   position: absolute;
   text-align: center;
   margin-left: 30px;
@@ -208,18 +229,17 @@ nav .searchForm{
   /*border: 1px solid red;*/
   overflow: hidden;
   margin: auto;
+  position: relative;
 
 }
 
 #video{
-  width: 50%;
-  height: 35vw;
-  margin-left: 30px;
-  position: absolute;
-  top: 50%;
-  transform: translateY(-50%);
   float: left;
   box-sizing:border-box;
+  margin:150px 10px 20px;
+  -webkit-box-shadow: 10px 10px 21px -6px rgba(207,207,207,1);
+  -moz-box-shadow: 10px 10px 21px -6px rgba(207,207,207,1);
+  box-shadow: 10px 10px 21px -6px rgba(207,207,207,1);
 }
 
 #preview-frame {
@@ -228,59 +248,15 @@ nav .searchForm{
 }
 
 #infoContainer{
-  float: right;
+  float: left;
+  padding: 20px 25px 20px;
+  margin:100px 20px 10px;
   background-color: #fff;
   box-sizing:border-box;
   overflow-y: auto;
-  width: 40%;
-  margin: 20px;
-  height: 44vw;
-  border: thin solid black;
+  height: 35vw;
+  -webkit-box-shadow: 10px 10px 21px -6px rgba(207,207,207,1);
+  -moz-box-shadow: 10px 10px 21px -6px rgba(207,207,207,1);
+  box-shadow: 10px 10px 21px -6px rgba(207,207,207,1);
 
 }
-
-
-/* Social sharing START*/
-.btn-twitter {
-    background: #00acee;
-    border-radius: 0;
-    color: #fff
-}
-.btn-twitter:link, .btn-twitter:visited {
-    color: #fff
-}
-.btn-twitter:active, .btn-twitter:hover {
-    background: #0087bd;
-    color: #fff
-}
-.btn-facebook {
-    background: #3b5998;
-    border-radius: 0;
-    color: #fff
-}
-.btn-facebook:link, .btn-facebook:visited {
-    color: #fff
-}
-.btn-facebook:active, .btn-facebook:hover {
-    background: #30477a;
-    color: #fff
-}
-.btn-googleplus {
-    background: #e93f2e;
-    border-radius: 0;
-    color: #fff
-}
-.btn-googleplus:link, .btn-googleplus:visited {
-    color: #fff
-}
-.btn-googleplus:active, .btn-googleplus:hover {
-    background: #ba3225;
-    color: #fff
-}
-/* Social sharing END*/
-
-/* responsive img START*/
-.wrapper { display: table; table-layout: fixed; width: 100% }
-img.img-responsive { display: table-cell; max-width: 100%;align-self: center }
-/* responsive img END*/
-
