--- a/css/style.css
+++ b/css/style.css
@@ -236,7 +236,7 @@ nav .searchForm{
 #video{
   float: left;
   box-sizing:border-box;
-  margin:150px 10px 20px;
+  margin:150px 0px 10px 20px;
   -webkit-box-shadow: 10px 10px 21px -6px rgba(207,207,207,1);
   -moz-box-shadow: 10px 10px 21px -6px rgba(207,207,207,1);
   box-shadow: 10px 10px 21px -6px rgba(207,207,207,1);
@@ -250,7 +250,7 @@ nav .searchForm{
 #infoContainer{
   float: left;
   padding: 20px 25px 20px;
-  margin:100px 20px 10px;
+  margin:100px 0px 20px 10px;
   background-color: #fff;
   box-sizing:border-box;
   overflow-y: auto;
