Final version of image and translation

--- a/css/style.css
+++ b/css/style.css
@@ -264,13 +264,24 @@ nav .searchForm{
 
 }
 
+.popover-content{
+  overflow-y:auto;
+  height:200px;
+}
 .popup{
   font-family: 'Raleway',sans-serif;
   padding: 5px;
   display: inline;
+
 }
 .popup b{
   display: inline;
+
+}
+
+.translation{
+  font-style: italic;
+  font-weight: lighter;
 }
 .grey{
   color: #ccc;
