--- a/css/style.css
+++ b/css/style.css
@@ -8,10 +8,10 @@
 	padding:0;
 	margin:0;
 }
-A{
+a{
   color:#4285f4;
 }
-A:hover{
+a:hover{
   color:#306199;
 }
 body{
@@ -268,6 +268,7 @@ nav .searchForm{
   font-family: 'Raleway',sans-serif;
   padding: 5px;
   display: inline;
+  z-index: 100000;
 }
 .popup b{
   display: inline;
